Fixed ugly post text <p> padding on small screens.

--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -114,6 +114,6 @@
     }
 
     .post .text p{
-        padding: 5%;
+        padding: 12px;
     }
 }
